update images and readme

--- a/src/_index.html
+++ b/src/_index.html
@@ -13,9 +13,9 @@
   <!-- Розмітка не використовується у тестуванні, але ви можете писати тут потрібний вам HTML та перевіряти його у браузері разом із логікою слайдера у main.js -->
   <div id="carousel">
     <div id="slides-container" class="slides">
-      <div class="slide active">1</div>
-      <div class="slide">2</div>
-      <div class="slide">3</div>
+      <div class="slide active"><img src="/src/images/mountains.jpg" height="750" width="100%"></div>
+      <div class="slide"><img src="/src/images/ocean.jpg" height="750" width="100%"></div>
+      <div class="slide"><img src="/src/images/edge.jpg" height="750" width="100%"></div>
     </div>
     <div id="indicators-container">
       <div class="indicator active" data-slide-to="0"></div>
